# PaperEcho

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  DISTRIBUTION.md  LICENSE  README.md  REFACTORING.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
python/: pyproject.toml
python/paperecho/: __init__.py  audio.py  device.py  export.py  pipeline.py  preprocess.py  progress.py  rhythm.py  score.py  separate.py  transcribe.py
python/tests/: test_pipeline.py  test_preprocess.py  test_rhythm.py  test_score.py  test_transcribe.py
scripts/: build-python-dist.sh  stage-ffmpeg.mjs
src/: App.css  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources-arm64/: runtime.sha256
src-tauri/src/: commands.rs  lib.rs  main.rs  python.rs  runtime.rs
src/components/: ScorePreview.tsx  Segmented.test.tsx  Segmented.tsx
src/lib/: audio.ts  format.test.ts  format.ts  i18n.test.ts  i18n.tsx  ipc.ts  mixer-gain.test.ts  mixer-gain.ts  types.ts
src/routes/: Analyze.tsx  Export.tsx  Home.test.tsx  Home.tsx  RuntimeSetup.tsx
