[project]
name = "paperecho"
version = "0.1.0"
description = "Paper Echo ML pipeline: audio -> stems -> MIDI/MusicXML"
requires-python = ">=3.11,<3.12"
dependencies = [
    "demucs>=4.0.1",
    "basic-pitch>=0.4.0",
    "onnxruntime>=1.17",
    "music21>=9.1",
    "librosa>=0.10.2",
    "torchcrepe>=0.0.24",
    "piano_transcription_inference>=0.0.6",
    "pretty_midi>=0.2.10",
    "soundfile>=0.12.1",
    "numpy>=1.23,<2.1",
    "beat-this>=1.1",
]

[project.scripts]
paperecho = "paperecho.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paperecho"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
# Match the runtime target; keep lines roomy for the explanatory comments.
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors (E), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "I", "UP", "B"]
# E501 (line length) is enforced by the formatter, not the linter, to avoid
# churning the carefully-wrapped domain comments.
ignore = ["E501"]
